# messenger-crypt

./: .gitattributes  .gitignore  .gitmodules  README.md  background.js  inject.js  install.sh  manifest.json  simple-server.py
chrome-extension/: background.html  background.js  crypto.js  inject.js  manifest.json  messenger-re.js  popup.html  popup.js  util.js
chromium/: background.html  background.js  badge.js  inject.js  manifest.json  messenger-re.js  popup.html  popup.js  test.js
crypto-server/: config.py  constants.py  encryption.py  keys.py  server.py  server_help.py  settings.py
crypto-server/help/: help.html  index.html
native/: CMakeLists.txt  Makefile  config.py  crypto.py  native.py  settings.py
native-py/: manifest.json  settings.py
native/include/: bool.h  config.h  encryption.h  error.h  handler.h  messaging.h  native.h
native/messenger_crypt/: CMakeLists.txt
native/messenger_crypt/include/: bool.h  config.h  encryption.h  error.h  handler.h  messaging.h  native.h
native/messenger_crypt/lib/frozen/: CMakeLists.txt
native/messenger_crypt/src/: config.c  encryption.c  error.c  handler.c  handler_contacts.c  handler_conversation.c  handler_decrypt.c  handler_encrypt.c  handler_settings.c  messaging.c  native.c
native/messenger_crypt_tests/: CMakeLists.txt
native/messenger_crypt_tests/src/: dummy.cpp  main.cpp  native.cpp  protocol.cpp  settings.cpp  tests.cpp  tests.hpp
native/src/: config.c  encryption.c  error.c  handle_encrypt.c  handle_settings.c  handler.c  handler_contacts.c  handler_conversation.c  handler_decrypt.c  handler_encrypt.c  handler_settings.c  messaging.c  native.c
native/tests/: Makefile  tests.py  tests_contacts.py  tests_conversation.py  tests_protocol.py  tests_settings.py
